--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@
       }
 
       .selected-word-placeholder {
-        display: inline;
-        visibility: hidden;
+        display: none;
       }
 
       .selected-word-container {
